# mopt

./: .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: l1min.md  lrmr.md
include/: types.h  utils.h
include/algo/: admm.h  algo.h  pgm.h
include/l1min/: l1min.h
include/lrmr/: lrmr.h
src/: utils.cpp
src/algo/: admm.cpp  pgm.cpp
src/l1min/: l1min.cpp
src/lrmr/: lrmr.cpp
test/: CMakeLists.txt  test1_2.cpp  test1_3.cpp  test1_4.cpp  test2_1.cpp  test2_2.cpp  test3.cpp
